# Orbit

./: .gitignore  README.md  pyrightconfig.json
backend/: .env.example  README.md  alembic.ini  pyproject.toml  pyrightconfig.json
backend/alembic/: env.py
backend/alembic/versions/: 20260427_0001_create_mvp_tables.py  20260501_0002_add_message_reasoning_content.py  20260502_0003_add_message_tree_branching.py  20260503_0004_add_conversation_active_stream_fields.py  20260506_0005_add_parallel_run_foundations.py  20260507_0006_provider_multi_models.py  20260508_0007_remove_conversation_active_stream_fields.py  20260508_0008_add_conversation_files.py  20260508_0009_add_llm_config_supports_vision.py  20260509_0010_drop_file_checksum_unique.py  20260512_0011_add_conversation_runs.py  20260515_0011_add_message_chat_mode.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: auth.py  conversations.py  files.py  llm_configs.py  router.py
backend/app/core/: config.py  crypto.py  security.py
backend/app/db/: base.py  schema_guard.py  session.py
backend/app/models/: __init__.py  conversation.py  conversation_file.py  conversation_run.py  enums.py  llm_config.py  message.py  user.py
backend/app/repositories/: conversation.py  conversation_file.py  conversation_run.py  llm_config.py  user.py
backend/app/schemas/: auth.py  conversation.py  file.py  llm_config.py
backend/app/services/: auth.py  conversation.py  file_service.py  llm_client.py  llm_config.py  llm_debug.py  llm_message_bridge.py  streaming.py
backend/app/services/agents/: __init__.py  factory.py  runtime.py  stream_adapter.py  tools.py  types.py
backend/app/services/conversations/: __init__.py  base.py  branch.py  crud.py  runs.py  stream_run.py
backend/app/services/files/: __init__.py  extraction.py  parser.py  storage.py
backend/app/services/generation/: __init__.py  (+1 more)
backend/tests/: conftest.py  test_advanced_agent_capabilities.py  test_agent_runtime.py  test_agent_trajectory.py  test_conversation_refactor.py  test_conversation_runs.py  test_deep_agent.py  test_langgraph_chat_runtime.py  test_langgraph_integration.py  test_langgraph_stream_adapter.py  test_llm_client_tools.py  test_llm_providers.py
(+110 files in other folders)
