[project]
name = "orbit-backend"
version = "0.1.0"
description = "Orbit MVP backend"
requires-python = ">=3.10"
dependencies = [
    "alembic",
    "anthropic",
    "asyncpg",
    "email-validator",
    "fastapi",
    "google-genai",
    "httpx",
    "langchain-anthropic",
    "langchain-core",
    "langchain-google-genai",
    "langchain-ollama",
    "langchain-openai",
    "openai",
    "PyJWT",
    "pydantic-settings",
    "sqlalchemy",
    "uvicorn",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
target-version = "py310"
line-length = 100
