[project]
name = "orbit-backend"
version = "0.1.0"
description = "Orbit MVP backend"
requires-python = ">=3.11"
dependencies = [
    "alembic",
    "anthropic",
    "asyncpg",
    "deepagents>=0.5.0",
    "email-validator",
    "fastapi",
    "google-genai",
    "httpx",
    "langchain-anthropic",
    "langchain-core",
    "langchain-google-genai",
    "langchain-ollama",
    "langchain-openai",
    "langgraph>=1.0.0",
    "langgraph-checkpoint>=4.0.0",
    "openai",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "PyJWT",
    "pydantic-settings",
    "python-multipart",
    "pytest",
    "sqlalchemy",
    "uvicorn",
]

[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*"]

[tool.ruff]
target-version = "py312"
line-length = 100
